@@ -29,6 +29,7 @@ import net.minecraft.world.entity.Entity;
 import net.minecraft.world.entity.EquipmentSlot;
 import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.item.*;
+import net.minecraft.world.item.crafting.RecipeHolder;
 import net.minecraft.world.level.Level;
 import net.neoforged.api.distmarker.Dist;
 import net.neoforged.api.distmarker.OnlyIn;
@@ -52,8 +53,8 @@ public class PowerlessJetpack implements IArmorLogic, IJetpack, IItemHUDProvider
 
     public static final int tankCapacity = 16000;
 
-    private GTRecipe previousRecipe = null;
-    private GTRecipe currentRecipe = null;
+    private RecipeHolder<GTRecipe> previousRecipe = null;
+    private RecipeHolder<GTRecipe> currentRecipe = null;
     private int burnTimer = 0;
 
     @OnlyIn(Dist.CLIENT)
@@ -201,7 +202,7 @@ public class PowerlessJetpack implements IArmorLogic, IJetpack, IItemHUDProvider
             FluidStack fuel = getFuel();
             if (fuel == null) return;
             getIFluidHandlerItem(stack).drain(fuel, IFluidHandler.FluidAction.EXECUTE);
-            burnTimer = currentRecipe.duration;
+            burnTimer = currentRecipe.value().duration;
         }
         this.burnTimer--;
     }
@@ -220,7 +221,7 @@ public class PowerlessJetpack implements IArmorLogic, IJetpack, IItemHUDProvider
         if (internalTank != null) {
             FluidStack fluidStack = internalTank.drain(1, IFluidHandler.FluidAction.EXECUTE);
             if (previousRecipe != null && !fluidStack.isEmpty() &&
-                    FluidRecipeCapability.CAP.of(previousRecipe.getInputContents(FluidRecipeCapability.CAP).get(0))
+                    FluidRecipeCapability.CAP.of(previousRecipe.value().getInputContents(FluidRecipeCapability.CAP).get(0))
                             .test(fluidStack) &&
                     fluidStack.getAmount() > 0) {
                 currentRecipe = previousRecipe;
@@ -239,9 +240,9 @@ public class PowerlessJetpack implements IArmorLogic, IJetpack, IItemHUDProvider
                         return table;
                     }
                 };
-                Iterator<GTRecipe> iterator = GTRecipeTypes.COMBUSTION_GENERATOR_FUELS.searchRecipe(holder);
+                Iterator<RecipeHolder<GTRecipe>> iterator = GTRecipeTypes.COMBUSTION_GENERATOR_FUELS.searchRecipe(holder);
                 if (iterator.hasNext()) {
-                    GTRecipe nextRecipe = iterator.next();
+                    RecipeHolder<GTRecipe> nextRecipe = iterator.next();
                     if (nextRecipe == null) {
                         return;
                     }
@@ -261,8 +262,8 @@ public class PowerlessJetpack implements IArmorLogic, IJetpack, IItemHUDProvider
 
     public FluidStack getFuel() {
         if (currentRecipe != null) {
-            var recipeInputs = currentRecipe.inputs.get(FluidRecipeCapability.CAP);
-            SizedFluidIngredient fluid = FluidRecipeCapability.CAP.of(recipeInputs.get(0).content);
+            var recipeInputs = currentRecipe.value().inputs.get(FluidRecipeCapability.CAP);
+            SizedFluidIngredient fluid = FluidRecipeCapability.CAP.of(recipeInputs.getFirst().content);
             return fluid.getFluids()[0];
         }
 
@@ -298,7 +299,7 @@ public class PowerlessJetpack implements IArmorLogic, IJetpack, IItemHUDProvider
                     return table;
                 }
             };
-            Iterator<GTRecipe> iterator = GTRecipeTypes.COMBUSTION_GENERATOR_FUELS.searchRecipe(holder);
+            Iterator<RecipeHolder<GTRecipe>> iterator = GTRecipeTypes.COMBUSTION_GENERATOR_FUELS.searchRecipe(holder);
             return iterator.hasNext() && iterator.next() != null;
         };
 
@@ -329,7 +330,7 @@ public class PowerlessJetpack implements IArmorLogic, IJetpack, IItemHUDProvider
         @Override
         public void appendHoverText(ItemStack stack, Item.TooltipContext context, List<Component> tooltipComponents,
                                     TooltipFlag isAdvanced) {
-            GTArmor data = stack.get(GTDataComponents.ARMOR_DATA);
+            GTArmor data = stack.getOrDefault(GTDataComponents.ARMOR_DATA, new GTArmor());
 
             Component state = data.enabled() ? Component.translatable("metaarmor.hud.status.enabled") :
                     Component.translatable("metaarmor.hud.status.disabled");
